--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 </head>
 <body>
-<h1>hello world</h1>
+
+  </script type="text/javascript" charset="utf-8" src="root.js"></script>
 </body>
 </html>
