--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <head>
 </head>
 <body>
-<script type="text/javascript" charset="utf-8" src="root.js"></script>
+<script type="text/javascript" charset="utf-8" src="/root.js"></script>
 </body>
 </html>
