--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html>
 <head>
+  <style>
+    body{
+      transition: background-color linear .3s;
+    }
+  </style>
 </head>
 <body>
 <script type="text/javascript" charset="utf-8" src="/blackghost3/root.js"></script>
