--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </style>
 </head>
 <body>
-<script type="text/javascript" charset="utf-8" src="/blackghost3/root.js"></script>
+<script type="text/javascript" charset="utf-8" src="/root.js"></script>
 </body>
 </html>
