--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     const ver = `root.js?v=${d.getTime()}`;
     (() => {
       let script = document.createElement("script");
-      script.scr = `/${ver}`;
+      script.src = `/${ver}`;
       script.charset = "utf-8";
       document.body.appendChild(script);
     })();
