--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       script.src = `/${ver}`;
       script.charset = "utf-8";
       document.body.appendChild(script);
+      console.log("script version", ver);
     })();
   </script>
 </body>
