--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       transition: background-color linear .3s;
     }
   </style>
+  <link rel="icon" href="http://lorempixle.com/60/60">
 </head>
 <body>
   <script type="text/javascript" charset="utf-8">
@@ -18,6 +19,7 @@
       document.body.appendChild(script);
       console.log("script", ver);
     })();
+    let 
   </script>
 </body>
 </html>
