--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
 <head>
+  <link rel="shortcut icon" href="http://lorempixle.com/60/60">
   <style>
     body{
       transition: background-color linear .3s;
     }
   </style>
-  <link rel="icon" href="http://lorempixle.com/60/60">
 </head>
 <body>
   <script type="text/javascript" charset="utf-8">
