--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <link rel="shortcut icon" href="http://lorempixle.com/60/60">
+  <link rel="shortcut icon" href="http://lorempixel.com/60/60">
   <style>
     body{
       transition: background-color linear .3s;
