--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html>
 <head>
-  <link rel="shortcut icon" href="http://lorempixel.com/60/60">
   <style>
     body{
       transition: background-color linear .3s;
@@ -10,6 +9,11 @@
 </head>
 <body>
   <script type="text/javascript" charset="utf-8">
+    let link =document.createElement("link");
+    link.rel = "shortcut icon";
+    link.href = "http://lorempixel.com/60/60";
+    document.head.appendChild(link);
+    // ------------------------------------------
     let d = new Date();
     const ver = `root.js?v=${d.getTime()}`;
     (() => {
