--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <style>
     body{
       transition: background-color linear .1s;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 50%;
     }
   </style>
 </head>
