--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
   <style>
     body{
       transition: background-color linear .1s;
+    }
+    .parent{
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 50%;
+      width: 100%;
     }
   </style>
 </head>
