--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <style>
     body{
       transition: background-color linear .1s;
+      overflow: hidden;
     }
     .parent{
       display: flex;
