--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     body{
       transition: background-color linear .1s;
       overflow: hidden;
+      position: relative;
     }
     .parent{
       display: flex;
@@ -13,6 +14,24 @@
       width: 100%;
       flex-direction: column;
       transition: all ease .2s;
+    }
+    .social-parent{
+      position: absolute;
+      left: 2%;
+      top: 50%;
+      transform: translateY(-45%);
+      height: 150px;
+      width: 100px;
+      background-color: #fff;
+    }
+    .media-item{
+      position: relative;
+      width: 100%;
+      height: 50px;
+      border-bottom: 1px solid #222;
+    }
+    .media-item:last-child{
+      border-bottom: none;
     }
   </style>
 </head>
