--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       height: 150px;
       width: 100px;
       background-color: #fff;
+      display: flex;
+      flex-direction: column;
     }
     .media-item{
       position: relative;
