--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
       background-color: #fff;
       display: flex;
       flex-direction: column;
+      align-items: center;
+      justify-content: center;
     }
     .media-item{
       position: relative;
