--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
       width: 100%;
       height: 50px;
       border-bottom: 1px solid #222;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
     .media-item:last-child{
       border-bottom: none;
