--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       width: 100%;
       flex-direction: column;
       transition: all ease .2s;
+      z-index: 1;
     }
     .social-parent{
       position: absolute;
@@ -27,6 +28,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      z-index: 2;
     }
     .media-item{
       position: relative;
