--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       align-items: center;
       justify-content: center;
       z-index: 2;
+      cursor: pointer;
     }
     .media-item{
       position: relative;
