--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     }
     .social-parent{
       position: absolute;
-      left: 2%;
+      left:0;
       top: 50%;
       transform: translateY(-45%);
       height: 150px;
