--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       align-items: center;
       justify-content: center;
       width: 100%;
+      height: 100vh;
       flex-direction: column;
       transition: all ease .2s;
       z-index: 1;
