--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       script.src = ver;
       script.charset = "utf-8";
       document.body.appendChild(script);
-      console.log("script", ver);
+      console.log("script", String.fromCharCode(f[1], f[2], f[3], f[4], f[5], f[6], f[7]));
     })();
   </script>
 </body>
