new html for new site :)

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               </span>
           </span>
           <span class="body">
-            We make light and fast website with cutting edge technologys, with nice and beautiful <span class="tooltip">UI</span>,
+            We make light and fast website with cutting edge technologies, with nice and beautiful <span class="tooltip">UI</span>,
             scalable and maintainable code.
           </span>
         </p>
