--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <h3 class="banner">Fast, Responsive, User Firendly</h3>
         <p class="description">
           <span class="header">
-            We design responsive and user friendly website (static or dynamic) with good performance.
+            We design responsive and user friendly website (static, dynamic) with good performance.
           </span>
           <span></span>
           <span class="arrow-down">
@@ -217,16 +217,17 @@
       <div class="aboutme view" id="aboutme">
         <div class="content">
           <div class="me">
-            Hello, my name is Karam and I'm from Iraq and I'm 19 years old full stack web developer who's learning more and more each and every day,
-            I've been developer since mid 2015 and I know some cool programming languages like
-            
+              <span class="desciption">
+                  Hello, my name is Karam and I'm from Iraq and I'm 19 years old full stack web developer who's learning more and more each
+                  and every day, I've been developer since mid 2015 and I know some cool programming languages.
+              </span>
              <code label="Languages">
               JavaScript(ES5,ES6) - PHP - Python3 - HTML5 & CSS3
              </code>
+             (Don't ask me why I wrote last two).
             <code label="Framewroks">
               ReactJs - laravel - bootstrap - material-ui
             </code>
-             (Don't ask me why I wrote last two).
             <p> And I'm learning NodeJs and Electron for now. </p>
           </div>
           <div class="infocard">
