--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
   </div>
   <div id="app" class="hidden">
       <div class="home view" id="home">
-        <h3 class="banner">Fast, Responsive, User Firendly</h3>
+        <h3 class="banner" js-translate="home.banner">Fast, Responsive, User Firendly</h3>
         <p class="description">
-          <span class="header">
+          <span class="header" js-translate="home.header">
             We design responsive and user friendly website (static, dynamic) with good performance.
           </span>
           <span></span>
@@ -141,7 +141,7 @@
                 <i class="fa fa-chevron-circle-up fa-5x cursor-pointer" js-nav-click="pricing"></i>
               </span>
           </span>
-          <span class="body">
+          <span class="body" js-translate="home.body">
             We make light and fast website with cutting edge technologies, with nice and beautiful <span class="tooltip">UI</span>,
             scalable and maintainable code.
           </span>
@@ -156,16 +156,7 @@
               <div class="head">static</div>
               <div class="price" currency-type="$">51</div>
               <div class="description">
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
+                
               </div>
             </div>
 
