added link to my cv

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     .container > .letter:nth-child(4){
       display: inline-block;
       animation: middleLetter 2.5s infinite normal;
-      animation-orgin: center;
+      transform-origin: center;
     }
 
     .container > .letter:last-child{
@@ -154,45 +154,28 @@
 
             <div class="price">
               <div class="head">static</div>
-              <div class="price" currency-type="$">51</div>
+              <div class="price" currency-type="$">50</div>
               <div class="description">
-                
+                <p>modern look and responsive</p>
+                <p>built with latest web technologies</p>
+                <p>simple and fast</p>
+                <p>user friendly</p>
+                <p>maintenance support until 5 months</p>
+                <p>material-ui and bootstrap support</p>
               </div>
             </div>
 
 
             <div class="price">
               <div class="head">dynamic</div>
-              <div class="price" currency-type="$">52</div>
+              <div class="price" currency-type="$">350</div>
               <div class="description">
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-              </div>
-            </div>
-
-
-            <div class="price">
-              <div class="head">Desktop</div>
-              <div class="price" currency-type="$">53</div>
-              <div class="description">
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p>backend: PHP7 and PHP5 support</p>
+                <p>backend: NodeJs support</p>
+                <p>database: MySQL support</p>
+                <p>frontend: React support</p>
+                <p>frontend: custom library support</p>
+                <p>PWA support</p>
               </div>
             </div>
 
@@ -245,6 +228,10 @@
             <span class="info-data-parent">
               <i class="fa fa-facebook-square"></i>
               <span class="cursor-pointer" style="text-decoration: underline;" onclick="window.open('https://fb.com/karamkarim.py')">@karamkarim.py</span>
+            </span>
+            <span class="info-data-parent">
+              <i class="fa fa-file-text-o"></i>
+              <span class="cursor-pointer" style="text-decoration: underline;" onclick="window.location.hash = 'cv'">My CV</span>
             </span>
             <span class="info-data-parent"></span>
           </div>
