--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="/statics/images/favicon.png" type="image/png">
   <style media="screen" id="initial-load">
     @font-face {
       font-family: 'Open Sans';
