--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <html lang="en">
   <head>
   <meta charset="UTF-8">
+  <title>Karam Karim</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="/statics/images/favicon.png" type="image/png">
   <style media="screen" id="initial-load">
