--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <span></span>
           <span class="arrow-down">
               <span>
-                <i class="fa fa-chevron-circle-up fa-5x cursor-pointer" js-nav-click="pricing"></i>
+                <i class="fa fa-chevron-circle-up fa-5x cursor-pointer" js-nav-click="pricing" data-fallback="#aboutme"></i>
               </span>
           </span>
           <span class="body" js-translate="home.body">
