--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
             <div class="price">
               <div class="head">static</div>
-              <div class="price" currency-type="$">50</div>
+              <div class="price" currency-type="$">100 - 200</div>
               <div class="description">
                 <p>modern look and responsive</p>
                 <p>built with latest web technologies</p>
@@ -170,7 +170,7 @@
 
             <div class="price">
               <div class="head">dynamic</div>
-              <div class="price" currency-type="$">350</div>
+              <div class="price" currency-type="$">300 - 500</div>
               <div class="description">
                 <p>backend: PHP7 and PHP5 support</p>
                 <p>backend: NodeJs support</p>
