--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
               JavaScript(ES5,ES6) - PHP - Python3 - HTML5 & CSS3
              </code>
              (Don't ask me why I wrote last two).
-            <code label="Framewroks">
+            <code label="Frameworks">
               ReactJs - laravel - bootstrap - material-ui
             </code>
             <p> And I'm learning NodeJs and Electron for now. </p>
