--- a/rat/index.html
+++ b/rat/index.html
@@ -5,7 +5,7 @@
   
   <script>
     
-    window.location.href = "https://github.com/node-rat/NodeRAT";
+    window.location.href = `${window.location.hostname}/#rat`;
   </script>
   
 </head>
