--- a/rat/index.html
+++ b/rat/index.html
@@ -5,7 +5,7 @@
   
   <script>
     
-    window.location.href = `${window.location.hostname}/#rat`;
+    window.location.href = "/#rat";
   </script>
   
 </head>
