--- a/cv/index.html
+++ b/cv/index.html
@@ -21,20 +21,20 @@
     <div class="body">
       <div class="col" style="background-image: url(./paper_blue.png);">
           <i class="fa fa-quote-left"></i> 
-           My name is Karam and I'm 19 years old Full Stack Web Developer, I've been developing website's since mid 2015 and contributing in some open source project once a while, and I've built
+           My name is Karam and I'm 20 years old Full Stack Web Developer, I've been developing website's since mid 2015 and contributing in some open source project once a while, and I've built
            multiple website since 2015, I love Open Source Projects and Linux and I'm really into web development and the technology behine web.
           <i class="fa fa-quote-right"></i>
       </div>
 
       <div class="col" style="background-image: url(./paper_yellow.png);">
         <h1>Contact</h1>
-        <p><i class="fa fa-phone fa-2x"></i> &nbsp;&nbsp; + (964) 0751 515 32 31</p>
+        <p><i class="fa fa-phone fa-2x"></i> &nbsp;&nbsp; + (964) 750 125 0622</p>
         <p><i class="fa fa-envelope-o fa-2x"></i> &nbsp;&nbsp; karamkarim.py@gmail.com</p>
-        <p><i class="fa fa-link fa-2x"></i> &nbsp;&nbsp; <a href="https://karamkarim.cf" target="_blank" style="color:white;">karamkarim.cf</a></p>
+        <p><i class="fa fa-link fa-2x"></i> &nbsp;&nbsp; <a href="https://blackghost3.github.io/BlackGhost3" target="_blank" style="color:white;">blackghost3.github.io/BlackGhost3</a></p>
         <br/>
         <hr>
         <h1>Location</h1>
-         &nbsp;&nbsp;Iraq - Kirkuk
+         &nbsp;&nbsp;Iraq - Sulaymaniyah  
       </div>
 
       <div class="col" style="background-image: url(./paper_blue.png);">
@@ -45,6 +45,9 @@
       <div class="col" style="background-image: url(./paper_yellow.png);">
         <h1>Employment History</h1>
         <b>Haxonic, Inc</b> <span style="width: 50%; display:inline-block;"></span> <i>January 2016 - November 2016</i><br/>
+        <i>Senior Developer</i>
+        
+        <b>9Soft, Inc</b> <span style="width: 50%; display:inline-block;"></span> <i>March 2017 - November 2017</i><br/>
         <i>Senior Developer</i>
       </div>
 
@@ -97,8 +100,8 @@
             <span style="display:inline-block; width: 5%;"></span>
             <i class="fa fa-star yellow"></i>
             <i class="fa fa-star yellow"></i>
-            <i class="fa fa-star yellow"></i>
-            <i class="fa fa-star yellow"></i>
+            <i class="fa fa-star"></i>
+            <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
           </li>
           
@@ -131,7 +134,7 @@
             <i class="fa fa-star yellow"></i>
             <i class="fa fa-star yellow"></i>
             <i class="fa fa-star yellow"></i>
-            <i class="fa fa-star"></i>
+            <i class="fa fa-star yellow"></i>
           </li>
           <li>Turkmani:
             <span style="display:inline-block; width: 3.5%;"></span>
