--- a/cv/index.html
+++ b/cv/index.html
@@ -12,7 +12,8 @@
   <div class="profile">
     <div class="head">
       <div class="img">
-        <img src="./bag-on-head.svg" alt="">
+<!--         <img src="./bag-on-head.svg" alt=""> -->
+        <img src="./me.jpeg" alt="">
       </div>
       <div class="name">Karam Karim</div>
       <div class="job">Full Stack Developer</div>
