--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <div class="content">
           <div class="me">
               <span class="desciption">
-                  Hello, my name is Karam and I'm from Iraq and I'm 19 years old full stack web developer who's learning more and more each
+                  Hello, my name is Karam and I'm from Iraq and I'm 20 years old full stack web developer who's learning more and more each
                   and every day, I've been developer since mid 2015 and I know some cool programming languages.
               </span>
              <code label="Languages">
@@ -217,7 +217,7 @@
 
             <span class="info-data-parent">
               <i class="fa fa-mobile"></i>
-               +(964) 751 515 32 31
+               <span class="cursor-pointer" style="text-decoration: underline;" onclick="window.open('tel:+9647501350622')">+964 750 135 0622</span>
             </span>
             
             <span class="info-data-parent">
