--- a/cv/index.html
+++ b/cv/index.html
@@ -17,6 +17,7 @@
       </div>
       <div class="name">Karam Karim</div>
       <div class="job">Full Stack Developer</div>
+      <div><a href="/index.ar.html" style="color:#000">العربية</a></div>
     </div>
 
     <div class="body">
