--- a/cv/index.ar.html
+++ b/cv/index.ar.html
@@ -19,7 +19,7 @@
             </div>
             <div class="name">كرم كريم</div>
             <div class="job">مطور المواقع الألكترونية</div>
-            <div><a href="/" style="color:#000">English</a></div>
+            <div><a href="/cv/" style="color:#000">English</a></div>
         </div>
 
         <div class="body">
