--- a/cv/index.ar.html
+++ b/cv/index.ar.html
@@ -17,17 +17,15 @@
                 <!--         <img src="./bag-on-head.svg" alt=""> -->
                 <img src="./me.jpeg" alt="">
             </div>
-            <div class="name">كرم كريم</div>
+            <div class="name">كرم كريم قاسم</div>
             <div class="job">مطور المواقع الألكترونية</div>
-            <div><a href="/BlackGhost3/cv/" style="color:#000">English</a></div>
+            <div><a href="./index.html" style="color:#000">English</a></div>
         </div>
 
         <div class="body">
             <div class="col" style="background-image: url(./paper_blue.png);">
                 <i class="fa fa-quote-left"></i>
-                مرحبا, أنا أسمي كرم كريم و مبرمج و أنا عمري 20 سنة, أنا في هذي مجال منذ في وسط 2015 الى هذا اليوم و اتبرع في مشاريع مصادر متفوحة في كل الاحيان للمرح و الاستفاد.
-                 انا احب برامج مصادر مفتوحة و لينيكس و تصميم مواقع , انها كنوعا ما شغفي و هوايتي و كل يوم احاول اطور نفسي و احاول ان 
-                 اعرف كل معلومات و تكنلوجيات وراء الويب.
+                مرحباً انا اسمي كرم كريم قاسم عمري 23 سنة مطور و مصمم مواقع , اعمل في مجال البرمجة منذ منتصف عام 2015 ساهمت في تطوير و تصميم مجموعة من البرامج مفتوحة المصدر , قمت بانشاء مجموعة من المواقع منذ بدايت مسيرتي العملية , احب البرامج مفتوحة المصدر و نظام لونيكس و التكنلوجيا و البرمجيات العامة ,عملت في جامعة الكتاب منذ 14-4-2019 في قسم الشؤون المالية و شعبة القبول و التسجيل , عملت في قسم الشؤون المالية بعدة ادوار متمثلة بـ ( امين صندوق , مسؤول ادخال بيانات و مسؤال ادارة بيانات الطلبة) و عملت في شعبة التسجيل و القبول بصفة (ادخال بيانات الطلبة , ارشفة بيانات الطلبة و متابع بيانات الطلبة الكترونياً) 
                 <i class="fa fa-quote-right"></i>
             </div>
 
@@ -49,17 +47,26 @@
 
             <div class="col" style="background-image: url(./paper_blue.png);">
                 <h1>التعليم</h1>
-                <p>المتوسطة شباب</p>
+                <p>ابتدائية سنكر المختلطة</p>
             </div>
 
             <div class="col" style="background-image: url(./paper_yellow.png);">
                 <h1>تاريخ التوظيف</h1>
-                <b>Haxonic, Inc</b> <span style="width: 50%; display:inline-block;"></span> <i>January 2016 - November
-                    2016</i><br />
-                <i>Senior Developer</i>
+                <i>3/2018 - 11/2018 </i><br />
+                <b>شركة التكنلوجيا تاسعة</b> <span style="width: 50%; display:inline-block;"></span> 
+                <br /><i>Senior Developer</i>
                 <br />
-                <b>9Soft, Inc</b> <span style="width: 50%; display:inline-block;"></span> <i>March 2017 - November 2017</i><br />
-                <i>Senior Developer</i>
+                <br />
+                <i>15/4/2019 </i><br />
+                <b>جامعة الكتاب</b> <span style="width: 50%; display:inline-block;"></span> 
+                <br />
+                <i>- مسؤول نظام ادارة طلاب و بيانت طلاب (قسم الحسابات)</i>
+                <br />
+                <i>- مسؤول نظام ادارة طلاب و بيانت طلاب (قسم تسجيل و قبول)</i>
+                <br />
+                <i>- امين صندوق</i>
+                <br />
+                
             </div>
 
             <div class="col" style="background-image: url(./paper_purple.png);">
@@ -80,7 +87,7 @@
                         <i class="fa fa-star yellow"></i>
                         <i class="fa fa-star yellow"></i>
                         <i class="fa fa-star yellow"></i>
-                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star yellow"></i>
                     </li>
 
                     <li>JavaScript:
@@ -111,7 +118,7 @@
                         <span style="display:inline-block; width: 5%;"></span>
                         <i class="fa fa-star yellow"></i>
                         <i class="fa fa-star yellow"></i>
-                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star yellow"></i>
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
                     </li>
@@ -122,16 +129,16 @@
             <div class="col" style="background-image: url(./paper_blue.png);">
                 <h1>اللغات</h1>
                 <ul class="langs">
-                    <li>Arabic:
+                    <li>العربي:
                         <span style="display:inline-block; width: 7%;"></span>
                         <i class="fa fa-star yellow"></i>
                         <i class="fa fa-star yellow"></i>
                         <i class="fa fa-star yellow"></i>
-                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star yellow"></i>
                         <i class="fa fa-star"></i>
                     </li>
 
-                    <li>English:
+                    <li>الأنكليزي:
                         <span style="display:inline-block; width: 6%;"></span>
                         <i class="fa fa-star yellow"></i>
                         <i class="fa fa-star yellow"></i>
@@ -139,7 +146,7 @@
                         <i class="fa fa-star yellow"></i>
                         <i class="fa fa-star"></i>
                     </li>
-                    <li>Kurdsh:
+                    <li>الكردية:
                         <span style="display:inline-block; width: 6%;"></span>
                         <i class="fa fa-star yellow"></i>
                         <i class="fa fa-star yellow"></i>
@@ -147,12 +154,12 @@
                         <i class="fa fa-star yellow"></i>
                         <i class="fa fa-star yellow"></i>
                     </li>
-                    <li>Turkmani:
+                    <li>التركمانية:
                         <span style="display:inline-block; width: 3.5%;"></span>
                         <i class="fa fa-star yellow"></i>
                         <i class="fa fa-star yellow"></i>
                         <i class="fa fa-star yellow"></i>
-                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star yellow"></i>
                         <i class="fa fa-star"></i>
                     </li>
 
