--- a/cv/index.html
+++ b/cv/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Karam Karim</title>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="./main.css">
   <link rel="stylesheet" href="./fontawesome/css/font-awesome.min.css">
 </head>
 <body>
@@ -17,14 +17,15 @@
       </div>
       <div class="name">Karam Karim</div>
       <div class="job">Full Stack Developer</div>
-      <div><a href="/BlackGhost3/cv/index.ar.html" style="color:#000">العربية</a></div>
+      <div><a href="./index.ar.html" style="color:#000">العربية</a></div>
     </div>
 
     <div class="body">
       <div class="col" style="background-image: url(./paper_blue.png);">
           <i class="fa fa-quote-left"></i> 
-           My name is Karam and I'm 20 years old Full Stack Web Developer, I've been developing website's since mid 2015 and contributing in some open source project once a while, and I've built
-           multiple website since 2015, I love Open Source Projects and Linux and I'm really into web development and the technology behine web.
+           My name is Karam and I'm 23 years old Full Stack Web Developer, I've been developing website's since mid 2015 and contributing in some open source project once a while, and I've built
+           multiple website since 2015, I love Open Source Projects and Linux and I'm really into web development and the technologies powering web.<br/>
+           I've been employee in Al-Kitab university since april 15th 2019 , i've been in ( Accounting , Registration) departments working in different position as needed. 
           <i class="fa fa-quote-right"></i>
       </div>
 
@@ -32,25 +33,32 @@
         <h1>Contact</h1>
         <p><i class="fa fa-phone fa-2x"></i> &nbsp;&nbsp; <a href="tel:+9647501350622" style="color:white;">+ (964) 750 135 0622</a></p>
         <p><i class="fa fa-envelope-o fa-2x"></i> &nbsp;&nbsp; <a href="mailto:karamkarim.py@gmail.com" target="_blank" style="color:white;">karamkarim.py@gmail.com</a></p>
-        <p><i class="fa fa-link fa-2x"></i> &nbsp;&nbsp; <a href="https://blackghost3.github.io/BlackGhost3" target="_blank" style="color:white;">blackghost3.github.io/BlackGhost3</a></p>
+        <p><i class="fa fa-link fa-2x"></i> &nbsp;&nbsp; <a href="https://github.com/BlackGhost3" target="_blank" style="color:white;">github.com/BlackGhost3</a></p>
         <br/>
         <hr>
         <h1>Location</h1>
-         &nbsp;&nbsp;Iraq - Sulaymaniyah  
+         &nbsp;&nbsp;Iraq - Kirkuk  
       </div>
 
       <div class="col" style="background-image: url(./paper_blue.png);">
         <h1>Education</h1>
-        <p>Shabab High School (Middle School)</p>
+        <p>Sangar Elementary School</p>
       </div>
 
       <div class="col" style="background-image: url(./paper_yellow.png);">
         <h1>Employment History</h1>
-        <b>Haxonic, Inc</b> <span style="width: 50%; display:inline-block;"></span> <i>January 2016 - November 2016</i><br/>
-        <i>Senior Developer</i>
         <br/>
-        <b>9Soft, Inc</b> <span style="width: 50%; display:inline-block;"></span> <i>March 2017 - November 2017</i><br/>
-        <i>Senior Developer</i>
+        <i>March 2018 - November 2018</i><br/>
+        <b>9Soft, Inc</b> <span style="width: 50%; display:inline-block;"></span> 
+        <br/><i>Senior Developer</i>
+
+        <br/>
+        <br/>
+        <i>Apr 15 2019 - Today</i><br/>
+        <b>Al-Kitab University, Financial Affairs</b> <span style="width: 50%; display:inline-block;"></span> <br />
+        <i>- System Manager/Developer</i><br />
+        <i>- Teller</i><br />
+        <i>- Student Registration Department</i><br />
       </div>
 
       <div class="col" style="background-image: url(./paper_purple.png);">
@@ -71,7 +79,7 @@
             <i class="fa fa-star yellow"></i>
             <i class="fa fa-star yellow"></i>
             <i class="fa fa-star yellow"></i>
-            <i class="fa fa-star"></i>
+            <i class="fa fa-star yellow"></i>
           </li>
 
           <li>JavaScript:
@@ -102,7 +110,7 @@
             <span style="display:inline-block; width: 5%;"></span>
             <i class="fa fa-star yellow"></i>
             <i class="fa fa-star yellow"></i>
-            <i class="fa fa-star"></i>
+            <i class="fa fa-star yellow"></i>
             <i class="fa fa-star"></i>
             <i class="fa fa-star"></i>
           </li>
@@ -118,7 +126,7 @@
             <i class="fa fa-star yellow"></i>
             <i class="fa fa-star yellow"></i>
             <i class="fa fa-star yellow"></i>
-            <i class="fa fa-star"></i>
+            <i class="fa fa-star yellow"></i>
             <i class="fa fa-star"></i>
           </li>
 
@@ -143,7 +151,7 @@
             <i class="fa fa-star yellow"></i>
             <i class="fa fa-star yellow"></i>
             <i class="fa fa-star yellow"></i>
-            <i class="fa fa-star"></i>
+            <i class="fa fa-star yellow"></i>
             <i class="fa fa-star"></i>
           </li>
 
